@@ -1,4 +1,5 @@
-1/30/12 handle collisions between solute particles and beaker wall
+1/31/12 delete shaker particles when they reach the surface of the solution, add corresponding amount of solute to the solution
+1/31/12 handle collisions between solute particles and beaker wall
 1/30/12 make solute particles accelerate properly
 1/30/12 adjust Solute fields related to particles
 1/30/12 create shaker particles with random orientations
